Had to capitalize characters

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <img src="Pictures/img5.jpeg" title="img" class="bg-img bg-img-5">
     <img src="Pictures/img6.jpeg" title="img" class="bg-img bg-img-6">
     <img src="Pictures/8.JPG" title="img" class="bg-img bg-img-8">
-    <img src="Pictures/1.jpg" title="img" class="bg-img bg-img-7">
-    <img src="Pictures/3.jpg" title="img" class="bg-img bg-img-9">
-    <img src="Pictures/5.jpg" title="img" class="bg-img bg-img-11">
-    <img src="Pictures/6.jpg" title="img" class="bg-img bg-img-12">
-    <img src="Pictures/7.jpg" title="img" class="bg-img bg-img-13">
-    <img src="Pictures/9.jpg" title="img" class="bg-img bg-img-15">
+    <img src="Pictures/1.JPG" title="img" class="bg-img bg-img-7">
+    <img src="Pictures/3.JPG" title="img" class="bg-img bg-img-9">
+    <img src="Pictures/5.JPG" title="img" class="bg-img bg-img-11">
+    <img src="Pictures/6.JPG" title="img" class="bg-img bg-img-12">
+    <img src="Pictures/7.JPG" title="img" class="bg-img bg-img-13">
+    <img src="Pictures/9.JPG" title="img" class="bg-img bg-img-15">
     <img src="Pictures/10.PNG" title="img" class="bg-img bg-img-16">
     <img src="Pictures/img8.JPG" title="img" class="bg-img bg-img-17">
     <img src="Pictures/img9.JPG" title="img" class="bg-img bg-img-18">
@@ -41,12 +41,12 @@
     <img src="Pictures/img5.jpeg" title="img" class="bg-img bg-img-5">
     <img src="Pictures/img6.jpeg" title="img" class="bg-img bg-img-6">
     <img src="Pictures/8.JPG" title="img" class="bg-img bg-img-8">
-    <img src="Pictures/1.jpg" title="img" class="bg-img bg-img-7">
-    <img src="Pictures/3.jpg" title="img" class="bg-img bg-img-9">
-    <img src="Pictures/5.jpg" title="img" class="bg-img bg-img-11">
-    <img src="Pictures/6.jpg" title="img" class="bg-img bg-img-12">
-    <img src="Pictures/7.jpg" title="img" class="bg-img bg-img-13">
-    <img src="Pictures/9.jpg" title="img" class="bg-img bg-img-15">
+    <img src="Pictures/1.JPG" title="img" class="bg-img bg-img-7">
+    <img src="Pictures/3.JPG" title="img" class="bg-img bg-img-9">
+    <img src="Pictures/5.JPG" title="img" class="bg-img bg-img-11">
+    <img src="Pictures/6.JPG" title="img" class="bg-img bg-img-12">
+    <img src="Pictures/7.JPG" title="img" class="bg-img bg-img-13">
+    <img src="Pictures/9.JPG" title="img" class="bg-img bg-img-15">
     <img src="Pictures/10.PNG" title="img" class="bg-img bg-img-16">
     <img src="Pictures/img8.JPG" title="img" class="bg-img bg-img-17">
     <img src="Pictures/img9.JPG" title="img" class="bg-img bg-img-18">
