--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-      <!-- TV Girl Audio Autoplay -->
+      <!-- TV Girl Audio Autoplay ---->
       <audio id="tvGirlAudio" src="TV Girl - Lovers Rock (Lyrics).mp3"></audio>
     <!-- Small background images with title 'img' -->
     <img src="Pictures/img7.jpeg" title="img" class="bg-img bg-img-1">
