one picture problem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="Pictures/img5.jpeg" title="img" class="bg-img bg-img-5">
     <img src="Pictures/img6.jpeg" title="img" class="bg-img bg-img-6">
     <img src="Pictures/8.JPG" title="img" class="bg-img bg-img-8">
-    <img src="Pictures/1.JPG" title="img" class="bg-img bg-img-7">
+    <img src="1.JPG" title="img" class="bg-img bg-img-7">
     <img src="Pictures/3.JPG" title="img" class="bg-img bg-img-9">
     <img src="Pictures/5.JPG" title="img" class="bg-img bg-img-11">
     <img src="Pictures/6.JPG" title="img" class="bg-img bg-img-12">
@@ -41,7 +41,7 @@
     <img src="Pictures/img5.jpeg" title="img" class="bg-img bg-img-5">
     <img src="Pictures/img6.jpeg" title="img" class="bg-img bg-img-6">
     <img src="Pictures/8.JPG" title="img" class="bg-img bg-img-8">
-    <img src="Pictures/1.JPG" title="img" class="bg-img bg-img-7">
+    <img src="1.JPG" title="img" class="bg-img bg-img-7">
     <img src="Pictures/3.JPG" title="img" class="bg-img bg-img-9">
     <img src="Pictures/5.JPG" title="img" class="bg-img bg-img-11">
     <img src="Pictures/6.JPG" title="img" class="bg-img bg-img-12">
