--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> La Grande Boucherie at 8:15pm!
+          <strong>Valentine Date:</strong> La Grande Boucherie, Friday, 8:15pm!
         </p>
       </div>
     </div>
